--- a/3.html_headings_paragraphs.html
+++ b/3.html_headings_paragraphs.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <title>HTML Headings and Paragraph....</title>
 </head>
+
 <body>
     <h1 style="background-color:red">Largest Heading</h1>
+    <!-- p untuk membuat paragraf baru -->
     <p align="center">This is the paragrpah....</p>
-    <p>This is the paragrpah....</p>    
+    <p>This is the paragrpah....</p>
     <h2>2nd heading</h2>
     <p>This is the paragrpah....</p>
     <h3>3rd heading</h3>
@@ -19,4 +22,5 @@
     <h6>Smallest</h6>
     <p>This is the paragrpah....</p>
 </body>
+
 </html>
