--- a/4.HTML_Comments.html
+++ b/4.HTML_Comments.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <!-- ini komen tidak akan di tampilkan -->
+    <!-- ini komen tidak akan di tampilkan di browser -->
     <h1 style="background-color:red">Largest Heading</h1>
     <p align="center">This is the paragrpah....</p>
     <p>This is the paragrpah....</p>
